k8s/07-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ticketing
  labels: {app: worker}
spec:
  replicas: 2
  selector:
    matchLabels: {app: worker}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  template:
    metadata:
      labels: {app: worker}
    spec:
      containers:
        - name: worker
          image: image-registry.openshift-image-registry.svc:5000/ticketing/ticketing-worker:1.0.0
          resources:
            requests: {cpu: "100m", memory: "128Mi"}
            limits: {cpu: "300m", memory: "256Mi"}
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
