k8s/06-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ticketing
  labels: {app: api}
spec:
  replicas: 2
  selector:
    matchLabels: {app: api}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  template:
    metadata:
      labels: {app: api}
    spec:
      containers:
        - name: api
          image: image-registry.openshift-image-registry.svc:5000/ticketing/ticketing-api:1.0.0
          ports: [{containerPort: 8080}]
          resources:
            requests: {cpu: "100m", memory: "128Mi"}
            limits: {cpu: "300m", memory: "256Mi"}
          readinessProbe:
            httpGet: {path: /readyz, port: 8080}
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthz, port: 8080}
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ticketing
spec:
  selector: {app: api}
  ports: [{port: 8080, targetPort: 8080}]
