k8s/08-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ticketing
  labels: {app: frontend}
spec:
  replicas: 2
  selector:
    matchLabels: {app: frontend}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  template:
    metadata:
      labels: {app: frontend}
    spec:
      containers:
        - name: frontend
          image: image-registry.openshift-image-registry.svc:5000/ticketing/ticketing-frontend:1.0.0
          ports: [{containerPort: 3000}]
          resources:
            requests: {cpu: "50m", memory: "64Mi"}
            limits: {cpu: "200m", memory: "128Mi"}
          readinessProbe:
            httpGet: {path: /healthz, port: 3000}
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthz, port: 3000}
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ticketing
spec:
  selector: {app: frontend}
  ports: [{port: 3000, targetPort: 3000}]
