k8s/09-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: ticketing
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 3000
