k8s/10-route-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  namespace: ticketing
spec:
  to:
    kind: Service
    name: api
  port:
    targetPort: 8080
