k8s/11-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-from-frontend
  namespace: ticketing
spec:
  podSelector: {matchLabels: {app: api}}
  policyTypes: ["Ingress"]
  ingress:
    - from:
           - namespaceSelector: {matchLabels: {network.openshift.io/policy-group: ingress}}
      ports: [{protocol: TCP, port: 8080}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-api-worker
  namespace: ticketing
spec:
  podSelector: {matchLabels: {app: postgres}}
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector: {matchLabels: {app: api}}
        - podSelector: {matchLabels: {app: worker}}
      ports: [{protocol: TCP, port: 5432}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-api-worker
  namespace: ticketing
spec:
  podSelector: {matchLabels: {app: redis}}
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector: {matchLabels: {app: api}}
        - podSelector: {matchLabels: {app: worker}}
      ports: [{protocol: TCP, port: 6379}]
